force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Account_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Account_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Analysis</label>
    <type>Checkbox</type>
</CustomField>