force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Account_Analysis_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Analysis_Enrollment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Analysis Enrollment Date</label>
    <type>Date</type>
</CustomField>