force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Account_Flow_Toggle__c.field-meta.xml
<CustomField>
    <fullName>Account_Flow_Toggle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox used by the Account - New Financial Account flow to trigger Account rollup fields.</description>
    <label>Account Flow Toggle</label>
    <type>Checkbox</type>
</CustomField>