force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CK</fullName>
            </value>
            <value>
                <fullName>SAV</fullName>
            </value>
            <value>
                <fullName>TD</fullName>
            </value>
            <value>
                <fullName>CNS</fullName>
            </value>
            <value>
                <fullName>MTG</fullName>
            </value>
            <value>
                <fullName>CML</fullName>
            </value>
            <value>
                <fullName>RTMT</fullName>
            </value>
            <value>
                <fullName>BKCK</fullName>
            </value>
            <value>
                <fullName>MLN</fullName>
            </value>
            <value>
                <fullName>LEAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>