force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Account_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Type_Formula__c</fullName>
    <formula>IF( CONTAINS(TEXT(Account_Type__c), &quot;CD&quot;) &amp;&amp; RecordType.Name= &quot;Savings Account&quot;, &quot;CD&quot;,  RecordType.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type Formula</label>
    <type>Text</type>
</CustomField>