force-app/main/default/objects/FinServ__FinancialAccount__c/fields/APY__c.field-meta.xml
<CustomField>
    <fullName>APY__c</fullName>
    <description>Custom field created to increase decimal places.</description>
    <label>APY</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>