force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Bill_Pay_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_Pay_Enrollment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bill Pay Enrollment Date</label>
    <type>Date</type>
</CustomField>