force-app/main/default/objects/FinServ__FinancialAccount__c/fields/BillPay__c.field-meta.xml
<CustomField>
    <fullName>BillPay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill Pay</label>
    <type>Checkbox</type>
</CustomField>