force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Book_Balance__c.field-meta.xml
<CustomField>
    <fullName>Book_Balance__c</fullName>
    <label>Book Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>