force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Branch_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Branch_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Financial Accounts</relationshipLabel>
    <relationshipName>Financial_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>