force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <label>Branch Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Branches</valueSetName>
    </valueSet>
</CustomField>