force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Cannabis_Loan__c.field-meta.xml
<CustomField>
    <fullName>Cannabis_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cannabis Loan</label>
    <type>Checkbox</type>
</CustomField>