force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Cash_Management__c.field-meta.xml
<CustomField>
    <fullName>Cash_Management__c</fullName>
    <formula>ISPICKVAL(Product__c,&quot;DESA Master Account&quot;)
||
PositivePay_ACH__c = true
||
PositivePay__c = true
||
Corporate_ACH_Activate__c = true
||
DACA__c = true
||
Lockbox__c = true
||
Sweeps__c = true
||
Wire__c = true
||
Remote_Deposit_Capture__c = true
||
Zero_Balance__c = true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cash Management</label>
    <type>Checkbox</type>
</CustomField>