force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Charge_Off_Balance__c.field-meta.xml
<CustomField>
    <fullName>Charge_Off_Balance__c</fullName>
    <label>Charge Off Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>