force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Close_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Close_Reason_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Close Reason Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>