force-app/main/default/objects/FinServ__FinancialAccount__c/fields/COCC_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>COCC_Product_Code__c</fullName>
    <formula>LEFT(Full_Product__c,4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COCC Product Code</label>
    <type>Text</type>
</CustomField>