force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Community_Development__c.field-meta.xml
<CustomField>
    <fullName>Community_Development__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Community Development</label>
    <type>Checkbox</type>
</CustomField>