force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Corporate_ACH_Activate__c.field-meta.xml
<CustomField>
    <fullName>Corporate_ACH_Activate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corporate ACH</label>
    <type>Checkbox</type>
</CustomField>