force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Corporate_ACH_Active_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Corporate_ACH_Active_Enrollment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Corporate ACH Enrollment Date</label>
    <type>Date</type>
</CustomField>