force-app/main/default/objects/FinServ__FinancialAccount__c/fields/DACA__c.field-meta.xml
<CustomField>
    <fullName>DACA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DACA</label>
    <type>Checkbox</type>
</CustomField>