force-app/main/default/objects/FinServ__FinancialAccount__c/fields/DACA_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>DACA_Enrollment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DACA Enrollment Date</label>
    <type>Date</type>
</CustomField>