force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Date_Opened_Formula__c.field-meta.xml
<CustomField>
    <fullName>Date_Opened_Formula__c</fullName>
    <formula>IF(NOT(ISBLANK(FinServ__OpenDate__c)),TEXT( FinServ__OpenDate__c ),TEXT( FinServ__BookedDate__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Opened Formula</label>
    <type>Text</type>
</CustomField>