force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Days_Delinquent__c.field-meta.xml
<CustomField>
    <fullName>Days_Delinquent__c</fullName>
    <label>Days Delinquent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>