force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Delinquent_Over_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Delinquent_Over_30_Days__c</fullName>
    <label>Delinquent Over 30 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>