force-app/main/default/objects/FinServ__FinancialAccount__c/fields/DESA__c.field-meta.xml
<CustomField>
    <fullName>DESA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DESA</label>
    <type>Checkbox</type>
</CustomField>