force-app/main/default/objects/FinServ__FinancialAccount__c/fields/DESA_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>DESA_Enrollment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DESA Enrollment Date</label>
    <type>Date</type>
</CustomField>