force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Due_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Formula__c</fullName>
    <formula>TEXT(FinServ__PaymentDueDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date Formula</label>
    <type>Text</type>
</CustomField>