force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Employee_Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Employee_Financial_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that this is an Employee Financial Account</inlineHelpText>
    <label>Employee Financial Account</label>
    <type>Checkbox</type>
</CustomField>