force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Express_Loan__c.field-meta.xml
<CustomField>
    <fullName>Express_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Express Loan</label>
    <type>Checkbox</type>
</CustomField>