force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Financial_Account_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account_Product_Type__c</fullName>
    <label>Financial Account Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>