force-app/main/default/objects/FinServ__FinancialAccount__c/fields/FinServ__AccrualFrequency__c.field-meta.xml
<CustomField>
    <fullName>FinServ__AccrualFrequency__c</fullName>
    <description>The frequency the interest is accrued on the financial account.</description>
    <label>Accrual Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>MNTH</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>