force-app/main/default/objects/FinServ__FinancialAccount__c/fields/FinServ__BranchName__c.field-meta.xml
<CustomField>
    <fullName>FinServ__BranchName__c</fullName>
    <description>The branch name of the financial account.</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Branch Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>