force-app/main/default/objects/FinServ__FinancialAccount__c/fields/FinServ__ClosureReason__c.field-meta.xml
<CustomField>
    <fullName>FinServ__ClosureReason__c</fullName>
    <description>Reason for closing the financial account.</description>
    <label>Closure Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>BANK</fullName>
                <label>Bank Closed Account</label>
            </value>
            <value>
                <fullName>CGHO</fullName>
                <label>Charge-Off</label>
            </value>
            <value>
                <fullName>CHGD</fullName>
                <label>Changed Banks</label>
            </value>
            <value>
                <fullName>CUST</fullName>
                <label>Closed per Customer</label>
            </value>
            <value>
                <fullName>DECE</fullName>
                <label>Deceased</label>
            </value>
            <value>
                <fullName>EDCR</fullName>
                <label>Abandon Property</label>
            </value>
            <value>
                <fullName>FEES</fullName>
                <label>Fees</label>
            </value>
            <value>
                <fullName>FRAU</fullName>
                <label>Fraud</label>
            </value>
            <value>
                <fullName>ITRN</fullName>
                <label>Internal Transfer</label>
            </value>
            <value>
                <fullName>MOVE</fullName>
                <label>Relocating/Moving</label>
            </value>
            <value>
                <fullName>NEGB</fullName>
                <label>Negative Balance</label>
            </value>
            <value>
                <fullName>OTHR</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>PBNK</fullName>
                <label>Prior Bank Closed</label>
            </value>
            <value>
                <fullName>RATE</fullName>
                <label>Competition Rate</label>
            </value>
            <value>
                <fullName>UNSA</fullName>
                <label>Customer Claims Unsatisfactory</label>
            </value>
            <value>
                <fullName>Account Maintenance Fees</fullName>
                <isActive>false</isActive>
                <label>Account Maintenance Fees</label>
            </value>
            <value>
                <fullName>Account no longer needed</fullName>
                <isActive>false</isActive>
                <label>Account no longer needed</label>
            </value>
            <value>
                <fullName>Moved out of the country</fullName>
                <isActive>false</isActive>
                <label>Moved out of the country</label>
            </value>
            <value>
                <fullName>Not able to maintain account</fullName>
                <isActive>false</isActive>
                <label>Not able to maintain account</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>