force-app/main/default/objects/FinServ__FinancialAccount__c/fields/FinServ__CollateralDesc__c.field-meta.xml
<CustomField>
    <fullName>FinServ__CollateralDesc__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Collateral Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>