force-app/main/default/objects/FinServ__FinancialAccount__c/fields/FinServ__Ownership__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Ownership__c</fullName>
    <label>Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
                <label>Individual</label>
            </value>
            <value>
                <fullName>JA</fullName>
                <label>Joint And</label>
            </value>
            <value>
                <fullName>PUB</fullName>
                <label>Public Funds</label>
            </value>
            <value>
                <fullName>JO</fullName>
                <label>Joint Or</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>