force-app/main/default/objects/FinServ__FinancialAccount__c/fields/FinServ__StatementFrequency__c.field-meta.xml
<CustomField>
    <fullName>FinServ__StatementFrequency__c</fullName>
    <label>Statement Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>DAY</fullName>
                <label>Daily</label>
            </value>
            <value>
                <fullName>AC31</fullName>
                <label>Annual Yearend</label>
            </value>
            <value>
                <fullName>EOM</fullName>
                <label>End of Month</label>
            </value>
            <value>
                <fullName>M005</fullName>
                <label>5th day of the Month</label>
            </value>
            <value>
                <fullName>M010</fullName>
                <label>10th day of the Month</label>
            </value>
            <value>
                <fullName>M015</fullName>
                <label>15th day of the Month</label>
            </value>
            <value>
                <fullName>M020</fullName>
                <label>20th day of the Month</label>
            </value>
            <value>
                <fullName>M025</fullName>
                <label>25th day of the Month</label>
            </value>
            <value>
                <fullName>TRUN</fullName>
                <label>LOC Truncated</label>
            </value>
            <value>
                <fullName>Q331</fullName>
                <label>Quarterly (Q331)</label>
            </value>
            <value>
                <fullName>X331</fullName>
                <label>Quarterly (X331)</label>
            </value>
            <value>
                <fullName>Biweekly</fullName>
                <isActive>false</isActive>
                <label>Biweekly</label>
            </value>
            <value>
                <fullName>Monthly</fullName>
                <isActive>false</isActive>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
                <isActive>false</isActive>
                <label>Quarterly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>