force-app/main/default/objects/FinServ__FinancialAccount__c/fields/FinServ__Status__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACT</fullName>
                <label>Active</label>
            </value>
            <value>
                <fullName>ORIG</fullName>
                <label>Originating</label>
            </value>
            <value>
                <fullName>APPR</fullName>
                <label>Approved</label>
            </value>
            <value>
                <fullName>CO</fullName>
                <label>Charge-off</label>
            </value>
            <value>
                <fullName>NPFM</fullName>
                <label>Non-Accrual</label>
            </value>
            <value>
                <fullName>DORM</fullName>
                <label>Dormant</label>
            </value>
            <value>
                <fullName>IACT</fullName>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>CLS</fullName>
                <label>Closed</label>
            </value>
            <value>
                <fullName>CWB</fullName>
                <label>Closed with Balance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>