force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Floor_Rate__c.field-meta.xml
<CustomField>
    <fullName>Floor_Rate__c</fullName>
    <label>Floor Rate</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>