force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Full_Product__c.field-meta.xml
<CustomField>
    <fullName>Full_Product__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Full Product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>