force-app/main/default/objects/FinServ__FinancialAccount__c/fields/GL_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Type__c</fullName>
    <label>GL Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Asset</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Liability</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Capital</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Revenue</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Expense</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>