force-app/main/default/objects/FinServ__FinancialAccount__c/fields/GL_Company__c.field-meta.xml
<CustomField>
    <fullName>GL_Company__c</fullName>
    <label>GL Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1634</fullName>
                <label>Main Street Bank</label>
            </value>
            <value>
                <fullName>1700</fullName>
                <label>MS Charitable Foundation</label>
            </value>
            <value>
                <fullName>2700</fullName>
                <label>1885 Security Corp</label>
            </value>
            <value>
                <fullName>2710</fullName>
                <label>Rail Town Security Corp</label>
            </value>
            <value>
                <fullName>2720</fullName>
                <label>MSB Security Corp</label>
            </value>
            <value>
                <fullName>2730</fullName>
                <label>Marbro-Hudston, Inc</label>
            </value>
            <value>
                <fullName>3800</fullName>
                <label>Main Street Bank Elim</label>
            </value>
            <value>
                <fullName>8700</fullName>
                <label>Main Street Group Bancshares Inc</label>
            </value>
            <value>
                <fullName>8800</fullName>
                <label>Main Street Group Bancshares Inc Elim</label>
            </value>
            <value>
                <fullName>9700</fullName>
                <label>Main Street Group Bancshares MHC</label>
            </value>
            <value>
                <fullName>9800</fullName>
                <label>Main Street Group Bancshares MHC Elim</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>